feat: 新增数据库检查工具，并更新主程序以将获取的令牌持久化至 JSON 文件。

--- a/.env.example
+++ b/.env.example
@@ -24,5 +24,5 @@ SCOPE=offline_access https://outlook.office.com/IMAP.AccessAsUser.All https://ou
 # 默认端口 5000，默认 host 0.0.0.0
 PORT=5000
 HOST=0.0.0.0
-FLASK_DEBUG=False
-COOKIE_DOMAIN=
+FLASK_DEBUG=True
+DB_URL=postgresql://user:password@host/dbname?sslmode=require
