feat: 增加调度器、通知功能和详细日志报告，以自动化 token 刷新和数据库同步。

--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,17 @@ REDIRECT_URI=http://localhost:5000
 # Scope (Permissions)
 # 注意：不能将 User.Read (Graph) 与 Outlook Scopes 混合使用，否则会报 AADSTS70011
 # "读写邮件全上" -> IMAP + SMTP
+# 权限范围 (收发邮件推荐配置, 可按需增减)
 SCOPE=offline_access https://outlook.office.com/IMAP.AccessAsUser.All https://outlook.office.com/SMTP.Send
+
+# --- 高级配置 (可选) ---
+
+# 数据库同步 (PostgreSQL)
+# DB_URL=postgresql+psycopg2://user:pass@host:5432/dbname
+
+# 通知推送 (Notify Hub)
+# NOTIFY_API_URL=http://your-notify-hub/api/notify
+# NOTIFY_KEY=your-project-key
 
 # Server Configuration
 # 默认端口 5000，默认 host 0.0.0.0
